--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+  --main: #2c2f33;
+  --secondary: #5865f2;
+}
+
 *,
 *::before,
 *::after {
@@ -13,10 +18,11 @@ body,
 #app {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 #app {
-  background-color: #2c2f33;
+  background-color: var(--main);
   display: grid;
   grid-template-columns: 9.5fr 2.5fr;
 }
@@ -26,7 +32,7 @@ body,
 }
 
 #app .side {
-  background-color: #5865f2;
+  background-color: var(--secondary);
 }
 
 .bubble {
@@ -140,4 +146,37 @@ body,
 .btn:hover {
   background-color: rgba(200, 200, 200, 1);
   transition: background-color 500ms ease;
+}
+
+.btn[disabled] {
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+}
+
+.pause-screen {
+  position: absolute;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary);
+  font-weight: 600;
+  font-size: 64px;
+  display: grid;
+  place-items: center center;
+}
+
+.game-over {
+  position: absolute;
+  z-index: 1001;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--secondary);
+  font-weight: 600;
+  font-size: 64px;
+  display: grid;
+  place-items: center center;
 }
