--- a/style.css
+++ b/style.css
@@ -153,7 +153,9 @@ body,
   color: white;
 }
 
-.pause-screen {
+.pause-screen,
+.game-over,
+.level-completed {
   position: absolute;
   z-index: 1000;
   left: 0;
@@ -168,15 +170,9 @@ body,
 }
 
 .game-over {
-  position: absolute;
   z-index: 1001;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--secondary);
-  font-weight: 600;
-  font-size: 64px;
-  display: grid;
-  place-items: center center;
+}
+
+.level-completed {
+  z-index: 1002;
 }
